--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,9 @@ footer .footer-grid {
   margin-bottom: 0px;
   padding-bottom: 0px;
   grid-template-areas: "izquierda centro derecha"; }
+  @media screen and (min-width: 320px) and (max-width: 768px) {
+    footer .footer-grid {
+      grid-template-areas: "izquierda izquierda" "centro centro" "derecha derecha"; } }
   footer .footer-grid #ft-izquierda {
     grid-area: izquierda; }
   footer .footer-grid #ft-centro {
@@ -367,6 +370,9 @@ footer .footer-grid {
     margin-bottom: 0px;
     margin-top: 2.5rem;
     filter: invert(70%); }
+    @media screen and (min-width: 320px) and (max-width: 768px) {
+      footer .footer-grid #footerLogo {
+        display: none; } }
   footer .footer-grid p, footer .footer-grid h3 {
     font-size: 15px; }
   footer .footer-grid h3 {
@@ -403,6 +409,9 @@ footer .footer-grid {
     margin-bottom: 0px;
     padding-bottom: 0px;
     grid-template-areas: "ig iglink" "fb fblink" "tw twlink" "lin linlink"; }
+    @media screen and (min-width: 320px) and (max-width: 768px) {
+      footer .footer-grid .ft-grid-2 {
+        margin-left: 0px; } }
     footer .footer-grid .ft-grid-2 #insta-icono {
       grid-area: ig; }
     footer .footer-grid .ft-grid-2 #insta-enlace {
