--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,8 @@ header {
   padding: 20px;
   z-index: 999;
   background-color: white; }
+  header ul {
+    font-family: 'Montserrat', sans-serif; }
   header #logo {
     height: 47px;
     width: 170px;
@@ -56,9 +58,12 @@ header {
 /*--------------------------------------------------------------
 # index 1
 --------------------------------------------------------------*/
+.inicio {
+  margin-top: 150px; }
+
 #hero {
   width: 100%;
-  height: 80vh;
+  height: 60vh;
   background: url("../images/green-desk.jpg") top center;
   background-size: cover;
   position: relative; }
@@ -71,7 +76,7 @@ header {
     left: 0;
     right: 0; }
   #hero .container {
-    padding-top: 72px; }
+    padding-top: 0px; }
   @media (max-width: 992px) {
     #hero #hero .container {
       padding-top: 62px; } }
@@ -80,7 +85,7 @@ header {
     margin: 10px 0 0 0;
     font-size: 24px; }
   #hero .btn-get-started {
-    font-family: "Raleway", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     font-size: 15px;
     letter-spacing: 1px;
@@ -123,7 +128,8 @@ header {
   .gridIndex #indexDerecha {
     grid-area: derecha;
     margin-left: 10px;
-    margin-top: 20px; }
+    margin-top: 20px;
+    margin-right: 100px; }
   .gridIndex #manosPlanta {
     height: auto;
     width: 80%;
@@ -141,11 +147,11 @@ header {
 
 .gridIndexServicios {
   display: grid;
-  grid-gap: 0px;
-  grid-template-columns: 33% 33% 33%;
+  grid-gap: 5%;
+  grid-template-columns: 25% 25% 25%;
   padding-top: 50px;
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 10%;
+  margin-right: 10%;
   text-align: center;
   justify-content: space-around;
   grid-template-areas: "izquierda centro derecha"; }
@@ -179,33 +185,21 @@ p, h2, form, table, header, ul {
   font-family: 'Roboto' , sans-serif;
   color: #4f4f4f; }
 
-h2 {
-  font-family: 'Roboto' , sans-serif;
-  color: black; }
-
-p, h2, form, ul {
-  margin-left: 20px;
-  margin-right: 50px; }
+h1, h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  font-size: 25px; }
 
 ul {
   font-size: 20px;
   font-family: 'Roboto' , sans-serif;
-  color: #848484;
-  margin-left: 80px;
-  margin-right: 50px; }
+  color: #848484; }
   ul li {
-    font-size: 18px;
-    margin-right: 5px;
-    padding: 0px; }
-
-h2 {
-  font-size: 25px;
-  margin-bottom: 0px;
-  margin-top: 0px; }
+    font-size: 18px; }
 
 /*--------------------------------------------------------------
 # Nosotros
---------------------------------------------------------------*/
+--------------------------------------------------------------
 #nosotrosBackground {
   background: url("../images/estrategia-byw.jpg");
   background-size: cover;
@@ -213,26 +207,43 @@ h2 {
   filter: opacity(70%);
   padding-bottom: 50px;
   margin-bottom: 100px;
-  padding-left: 20px; }
-
-.titulo, .grid-contacto .elementos #contactanos {
-  font-family: "Poppins", sans-serif;
-  color: black;
-  font-size: 2.5rem; }
-
-#nosotros {
-  margin-bottom: 20px;
-  padding-top: 20px;
-  margin-top: 100px;
-  margin-left: 20px; }
-
-.parrafo, #nosotrosParrafo {
-  font-size: 18px;
-  color: black; }
+  padding-left: 20px; }*/
+.nosotros-content {
+  z-index: 9999;
+  margin-left: 100px;
+  margin-right: 100px; }
+  .nosotros-content .titulo, .nosotros-content .grid-contacto .elementos #contactanos, .grid-contacto .elementos .nosotros-content #contactanos {
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    font-size: 2.5rem; }
+  .nosotros-content #nosotros {
+    margin-bottom: 20px;
+    padding-top: 20px;
+    margin-top: 100px; }
+  .nosotros-content .grid-parrafo {
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "izquierda derecha"; }
+    @media screen and (min-width: 250px) and (max-width: 768px) {
+      .nosotros-content .grid-parrafo {
+        grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+    .nosotros-content .grid-parrafo #p-izquierda {
+      grid-area: izquierda; }
+      .nosotros-content .grid-parrafo #p-izquierda p {
+        font-size: 1rem; }
+    .nosotros-content .grid-parrafo #p-derecha {
+      grid-area: derecha; }
+    .nosotros-content .grid-parrafo p {
+      font-size: 1rem;
+      color: #848484; }
+    .nosotros-content .grid-parrafo #trabajamos {
+      font-size: 18px;
+      color: #6f9c53; }
 
 .grid-nosotros {
   display: grid;
-  grid-gap: 0px;
+  grid-gap: 30px;
   grid-template-columns: 50% 50%;
   justify-content: space-around;
   text-align: center;
@@ -246,15 +257,16 @@ h2 {
   .grid-nosotros #nosotros-izquierda {
     grid-area: izquierda; }
     .grid-nosotros #nosotros-izquierda h2 {
-      font-size: 25px; }
+      font-size: 25px;
+      color: black; }
     .grid-nosotros #nosotros-izquierda p {
-      font-size: 18px; }
+      font-size: 1rem; }
   .grid-nosotros #nosotros-derecha {
     grid-area: derecha; }
     .grid-nosotros #nosotros-derecha h2 {
       font-size: 25px; }
     .grid-nosotros #nosotros-derecha p {
-      font-size: 18px; }
+      font-size: 1rem; }
   .grid-nosotros .directores {
     height: 200px;
     width: 200px;
@@ -272,8 +284,10 @@ h2 {
     padding: 10px;
     font-size: 25px;
     margin-top: 70px;
-    margin-left: 200px;
-    font-family: 'Montserrat', sans-serif; }
+    padding-left: 150px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    background-color: #b2b2b2; }
   #seccionEstrategia .grid-estrategia {
     display: grid;
     grid-gap: 0px;
@@ -318,15 +332,17 @@ h2 {
     #seccionCapacitaciones .flex-rama #capacitaciones {
       font-size: 25px;
       margin-top: 70px;
-      margin-right: 300px;
-      font-family: 'Montserrat', sans-serif; }
+      margin-right: 350px;
+      font-family: 'Montserrat', sans-serif;
+      margin-bottom: 0px;
+      font-weight: 300; }
   #seccionCapacitaciones .grid-capacitaciones {
     display: grid;
     grid-gap: 0px;
     justify-content: space-around;
     grid-template-columns: 50% 50%;
     align-items: center;
-    padding-top: 10px;
+    padding-top: 0px;
     margin: 0px;
     grid-template-areas: "izquierda derecha"; }
     @media screen and (min-width: 250px) and (max-width: 768px) {
@@ -344,15 +360,18 @@ h2 {
       grid-area: derecha;
       margin-right: 100px;
       margin-bottom: 20px;
-      margin-top: 0px; }
+      margin-top: 0px;
+      margin-left: 50px; }
 
 #seccionComunicacion #comunicacionDeImpacto {
   padding: 10px;
   font-size: 25px;
   margin-top: 70px;
-  padding-left: 200px;
+  padding-left: 150px;
   color: black;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+  background-color: #b2b2b2; }
 
 #seccionComunicacion .grid-comunicacion {
   display: grid;
@@ -369,9 +388,13 @@ h2 {
       grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
   #seccionComunicacion .grid-comunicacion #grid-comunicacion-izquierda {
     grid-area: izquierda;
-    margin-left: 100px;
+    margin-left: 180px;
     margin-bottom: 20px;
     margin-top: 0px; }
+    #seccionComunicacion .grid-comunicacion #grid-comunicacion-izquierda #hashtagg {
+      height: auto;
+      width: 50%;
+      position: relative; }
   #seccionComunicacion .grid-comunicacion #grid-comunicacion-derecha {
     grid-area: derecha;
     margin-right: 100px; }
@@ -462,18 +485,17 @@ h2 {
     .grid-contacto .gridContactoIcons #map-enlace-contacto {
       grid-area: ciudad; }
     .grid-contacto .gridContactoIcons p {
-      font-size: 20px; }
+      font-size: 1rem;
+      margin-top: 10px; }
   .grid-contacto .flexRedesContacto {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
     align-content: left;
-    padding-left: 50px;
     margin: 0px; }
     .grid-contacto .flexRedesContacto .redesContacto {
       margin-left: 0px;
-      margin-right: 50px;
+      margin-right: 30px;
       margin-top: 30px;
       padding-bottom: 20px; }
     .grid-contacto .flexRedesContacto .redesContacto:hover {
@@ -496,6 +518,7 @@ footer {
     margin-bottom: 0px;
     padding-bottom: 0px;
     padding-top: 20px;
+    line-height: 0.5rem;
     grid-template-areas: "izquierda centro derecha"; }
     @media screen and (min-width: 250px) and (max-width: 768px) {
       footer .footer-grid {
@@ -505,28 +528,31 @@ footer {
     footer .footer-grid #ft-centro {
       grid-area: centro; }
     footer .footer-grid #ft-derecha {
-      grid-area: derecha; }
+      grid-area: derecha;
+      margin-left: 30px; }
     footer .footer-grid #footerLogo {
       height: 50px;
       width: 200px;
-      margin-left: 130px;
-      margin-bottom: 0px;
-      margin-top: 2.5rem;
+      margin-left: 30px;
+      margin-bottom: 30px;
+      margin-top: 1rem;
       filter: invert(100%); }
       @media screen and (min-width: 250px) and (max-width: 768px) {
         footer .footer-grid #footerLogo {
           display: none; } }
-    footer .footer-grid p, footer .footer-grid h3 {
-      font-size: 15px; }
+    footer .footer-grid p {
+      font-size: 13px; }
     footer .footer-grid h3 {
       margin-left: 35px;
       margin-top: 0px;
-      margin-bottom: 10px; }
+      padding-top: 0px;
+      margin-bottom: 10px;
+      font-size: 15px; }
     footer .footer-grid .ft-grid-1 {
       display: grid;
       grid-gap: 0px;
       grid-template-columns: 7% 93%;
-      margin-top: 10px;
+      margin-top: 0px;
       margin-bottom: 0px;
       margin-left: 0px;
       margin-right: 0px;
@@ -580,7 +606,8 @@ footer {
       padding-right: 0px;
       margin-right: 0px;
       padding-left: 0px;
-      margin-left: 10px; }
+      margin-left: 10px;
+      margin-top: 3px; }
     footer .footer-grid .ft-redes-1 {
       margin-left: 0px;
       padding-right: 0px;
@@ -589,7 +616,8 @@ footer {
       padding-left: 10px;
       margin-right: 0px;
       margin-left: 0px;
-      padding-right: 0px; }
+      padding-right: 0px;
+      margin-top: 3px; }
   footer #derechos {
     background-color: #b2b2b2;
     padding: 0px; }
